src/test/resources/public/input/typechecking/fail/double_decl/fail18.jova
class Helper{

}

class Test{
    Test(int x, string y, bool z){
    }

    Test(int x, string y, bool z, Helper x, Helper y, Helper z){
    }
}